--- a/nill-dl/index2.html
+++ b/nill-dl/index2.html
@@ -285,8 +285,8 @@
                                     <img src="assets\img\me.jpg" alt="/" class="rounded img-thumbnail w-100">  
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
-                                     <h2 class="text-dark mb-2">About Me<span class="base-color"></span></h2>
-                                     <h5 class="text-dark mb-2">Hello, I'm Samantha Renee Ballard<span class="base-color"></span> </span> </h5>
+                                     <h2 class="text-dark mb-2">About Me<span class="base-color mb-0"></span></h2>
+                                     <h5 class="text-dark mb-2">Hello, I'm Samantha Ballard<span class="base-color"></span> </span> </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
