--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2"><span class="base-color">About Me</span></h2>
-                                     <h5 class="text-dark mb-3">Hello, I'm Samantha Renee Ballard </h5>
+                                     <h5 class="text-dark mb-2"><span class="base-color">Hello, I'm Samantha Ballard </span></h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
