--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
                     <div class="display-content">
                         <div class="container">
                             <div class="title-small">
-                                <p class="text-dark">Home</p>
+                                <p class="text-dark"><span class="base-color"></span>Home</span></p>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="hero-content">
-                                        <h1 class="text-dark mb-3">I'm Samantha</h1>
+                                        <h1 class="text-dark mb-2"><span class="base-color">I'm Samantha</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span>,</span></h4>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
