--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="display-content">
                         <div class="container">
                             <div class="title-small">
-                                <p class="text-dark"><span class="base-color"></span>Home</span></p>
+                                <p class="text-dark mb-2"><span class="base-color"></span>Home</span></p>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -243,7 +243,7 @@
                          <div class="container">
                              <div class="row">
                                  <div class="title-small">
-                                     <p class="text-dark">Resume</p>
+                                     <p class="text-dark mb-2"><span class="base-color">Resume</span></p>
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
@@ -254,7 +254,7 @@
                              </div>
                              <div class="row mt-4">
                                  <div class="col-lg-6">
-                                     <h3 class="text-dark mb-2"><i class="lni-graduation base-color"></i>Education</h3>
+                                     <h3 class="text-dark mb-2"><i class="lni-graduation base-color"></i><span class="base-color">Education</span></h3>
                                      <ul class="timeline">
                                          <li>
                                              <h6 class="base-color mb-0">Meteorology B.S. Penn State</h6>
@@ -269,7 +269,7 @@
                                      </ul>
                                  </div>
                                 <div class="col-lg-6">
-                                     <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i>Experience</h3>
+                                     <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i><span class="base-color">Experience</span></h3>
                                      <ul class="timeline">
                                          <li>
                                              <h6 class="base-color mb-0">Doctoral Research Assistant </h6>
