--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="display-content">
                         <div class="container">
                             <div class="title-small">
-                                <p class="text-dark mb-2"><span class="base-color"><Home</span></p>
+                                <p class="text-dark mb-2"><span class="base-color">Home</span></p>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -362,7 +362,7 @@
                                 <div class="col-lg-12">
                                     <div class="text-left">
                                         <h2 class="text-dark mb-3"> <span class="base-color">My Research</span></h2>
-                                        <p class="text-muted">Research Projects</p>
+                                        <p class="text-muted">Research Interests/Projects</p>
                                     </div>
                                 </div>
                             </div>
@@ -374,8 +374,8 @@
                                             <i class="lni-brush-alt size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">CLASI</h5>
-                                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                            <h5 class="mb-3">COASTAL LAND AIR-SEA INTERACTION EXPERIMENT</h5>
+                                            <p class="text-muted mb-0"></p>
                                         </div>
                                     </div>
                                 </div>
@@ -386,7 +386,7 @@
                                             <i class="lni-check-mark-circle size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">FLEAT</h5>
+                                            <h5 class="mb-3">SEA TURTLES</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -398,7 +398,7 @@
                                             <i class="lni-heart size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">REMOTE SENSING</h5>
+                                            <h5 class="mb-3">FLOW ENCOUNTERING ABRUPT TOPOGRAPHY EXPERIMENT</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -422,7 +422,7 @@
                                             <i class="lni-world size-md base-color mb-0"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">PROGRAMMING</h5>
+                                            <h5 class="mb-3">REMOTE SENSING</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -496,7 +496,7 @@
                                  <div class="col-lg-12">
                                      <div class="text-left">
                                          <h2 class="text-dark"> <span class="base-color">Portfolio</span></h2>
-                                         <p class="text-muted mx-auto section-subtitle mt-3">Meet My Awesome Works and Enjoy</p>
+                                         <p class="text-muted mx-auto section-subtitle mt-3"></p>
                                      </div>
                                  </div>
                              </div>
