--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="display-content">
                         <div class="container">
                             <div class="title-small">
-                                <p class="text-dark mb-2"><span class="base-color">Home</span></p>
+                                <p class="text-dark"><span class="base-color">Home</span></p>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
