--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
                                          <div class="img-overlay text-center">
                                              <div class="img-overlay-content">
                                                  <div class="portfolio-icon">
-                                                     <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                     <!--<button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                          <i class="lni-link"></i>
-                                                     </button>
+                                                     </button>-->
                                                      <a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                          <i class="lni-search"></i>
                                                      </a>
@@ -801,7 +801,7 @@
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-github-original text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-linkedin-original text-dark mr-2"></i></a></li>
                              </ul>
-                             <p class="pl-3 text-dark"><span class="base-color"><Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina,</span></a></p>
+                             <p class="pl-3 text-dark"><span class="base-color">Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina</span></a></p>
                          </div>
                      </div>
                  </div>
