--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">LAND AIR-SEA PHYSICS</h5>
-                                            <p class="text-muted mb-0"></p> <!--text goes here -->
+                                            <p class="text-muted mb-0">Satellite-derived Air Sea Parameter Algorithm </p> <!--text goes here -->
                                         </div>
                                     </div>
                                 </div>
@@ -422,8 +422,8 @@
                                                 <i class="lni lni-laptop size-md base-color"></i>
                                             </div>
                                             <div class="services-content">
-                                                <h5 class="mb-3">DATA SCIENCE</h5>
-                                                <p class="text-muted mb-0"></p>
+                                                <h5 class="mb-3">DATA SCIENCE/PROGRAMMING</h5>
+                                                <p class="text-muted mb-0">Machine Learning, Image and Signal Processing, Modeling  </p>
                                             </div>
                                         </div>
                                 </div>
@@ -435,7 +435,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">WAVES</h5>
-                                            <p class="text-muted mb-0"></p>
+                                            <p class="text-muted mb-0">Oceanic and Atmospheric</p>
                                         </div>
                                     </div>
                                 </div>
@@ -447,7 +447,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">WEATHER/CLIMATE FORECASTING</h5>
-                                            <p class="text-muted mb-0"></p>
+                                            <p class="text-muted mb-0">Hurricane, Winter Weather, Marine and Daily Forecasts</p>
                                         </div>
                                     </div>
                                 </div>
@@ -460,7 +460,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">REMOTE SENSING/SATELLITES</h5>
-                                            <p class="text-muted mb-0"></p>
+                                            <p class="text-muted mb-0">Passive and Active, Radar, Synthetic Aperture Radar, Airborne, Spaceborne, Land and Ship-based</p>
                                         </div>
                                     </div>
                                 </div>
@@ -472,7 +472,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">SPACE WEATHER</h5>
-                                            <p class="text-muted mb-0"></p>
+                                            <p class="text-muted mb-0">Autonomical Coronal Mass Ejection Detection Algorithm </p>
                                         </div>
                                     </div>
                                 </div>
@@ -483,7 +483,7 @@
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">SEA TURTLES</h5>
-                                                <p class="text-muted mb-0">.</p>
+                                                <p class="text-muted mb-0">Climatological and Topographic Effect on Sea Turtle Nests, High Dunes/Vegetation Case Study</p>
                                             </div>
                                         </div>
                                     </div>
@@ -498,7 +498,7 @@
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">INSTRUMENTATION</h5>
-                                        <p class="text-muted mb-0"></p>
+                                        <p class="text-muted mb-0">At-Home Weather Station, Tidal Station, Nautical Radar, Temperature, Humidity and Pressure Sensors, Ultra-Sonic Anemometers, Buoys, Satellites, SAR, Hygrometer, Lasers, Radiosondes, XBTs, PIES, CTDs, Moorings </p>
                                     </div>
                                 </div>
                                 </div>
@@ -510,7 +510,7 @@
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
-                                        <p class="text-muted mb-0"></p>
+                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs, Videos/Youtube</p>
                                     </div>
                                 </div>
                                 </div>
