--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                         </li>
                                          <li>
                                              <h6 class="base-color mb-0">Sea Turtle Researcher/Surveyor</h6>
-                                             <small class="text-muted ">Miami,Fl</small>
+                                             <small class="text-muted ">Miami,FL</small>
                                              <!--<small class="text-muted ">Current</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
@@ -326,6 +326,12 @@
                                             <small class="text-muted ">Boulder, CO</small>
                                             <!--<small class="text-muted ">Summer 2014</small>
                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                        </li>
+                                        <li>
+                                                <h6 class="base-color mb-0">Fox 45 News Meteorology Intern </h6>
+                                                <small class="text-muted ">Baltimore, MD</small>
+                                                <!--<small class="text-muted ">Summer 2014</small>
+                                                <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                         </li>
                                      </ul>
                                  </div>
@@ -411,7 +417,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">LAND AIR-SEA PHYSICS</h5>
-                                            <p class="text-muted mb-0">Satellite-derived Air Sea Parameter Algorithm </p> <!--text goes here -->
+                                            <p class="text-muted mb-0">Satellite-derived Air Sea Parameter Algorithm, Turbulence, Wind-Wave Interactions, Coastal and Boundary Layer Processes </p> <!--text goes here -->
                                         </div>
                                     </div>
                                 </div>
@@ -423,7 +429,7 @@
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">DATA SCIENCE/PROGRAMMING</h5>
-                                                <p class="text-muted mb-0">Machine Learning, Image and Signal Processing, Modeling  </p>
+                                                <p class="text-muted mb-0">Machine Learning, Image and Signal Processing, Modeling, Algorithm Development </p>
                                             </div>
                                         </div>
                                 </div>
@@ -435,7 +441,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">WAVES</h5>
-                                            <p class="text-muted mb-0">Oceanic and Atmospheric</p>
+                                            <p class="text-muted mb-0">Oceanic (gravity, internal, capillary, Bragg) and Atmospheric (gravity, orthographic-lee, Rossby) </p>
                                         </div>
                                     </div>
                                 </div>
@@ -447,7 +453,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">WEATHER/CLIMATE FORECASTING</h5>
-                                            <p class="text-muted mb-0">Hurricane, Winter Weather, Marine and Daily Forecasts</p>
+                                            <p class="text-muted mb-0">Hurricane, Winter Weather, Marine and Other Short-Term Forecasts</p>
                                         </div>
                                     </div>
                                 </div>
@@ -472,7 +478,7 @@
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">SPACE WEATHER</h5>
-                                            <p class="text-muted mb-0">Autonomical Coronal Mass Ejection Detection Algorithm </p>
+                                            <p class="text-muted mb-0">Autonomical Coronal Mass Ejection Detection Algorithm, Inter-planetary</p>
                                         </div>
                                     </div>
                                 </div>
@@ -483,7 +489,7 @@
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">SEA TURTLES</h5>
-                                                <p class="text-muted mb-0">Climatological and Topographic Effect on Sea Turtle Nests, High Dunes/Vegetation Case Study</p>
+                                                <p class="text-muted mb-0">Climatological and Topographic Effects on Sea Turtle Nests, High Dunes/Vegetation Nests</p>
                                             </div>
                                         </div>
                                     </div>
