--- a/index.html
+++ b/index.html
@@ -482,6 +482,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                    
+                                    <div class="col-lg-4 text-left">
+                                            <div class="services-item">
+                                                <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                        <i class="lni lni-rocket size-md base-color"></i>
+                                                </div>
+                                                <div class="services-content">
+                                                    <h5 class="mb-3">CLOUDS</h5>
+                                                    <p class="text-muted mb-0">Classification, Radiative Feedbacks, Lenticular and Other Orographically Forced Clouds,  </p>
+                                                </div>
+                                            </div>
+                                        </div>
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -526,8 +538,8 @@
                                             <i class="lni lni-thought size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
-                                        <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
-                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs/Videos</p>
+                                        <h5 class="mb-3">SCIENCE COMMUNICATION/OUTREACH</h5>
+                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs/Videos,Mentoring, IMPACT Program Lab Coach for Underrepresented Students, Beach Cleanups, Sea Turtle Beach Surveys, Local Shelters</p>
                                     </div>
                                 </div>
                                 </div>
@@ -539,21 +551,21 @@
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">HOBBIES</h5>
-                                                <p class="text-muted mb-0">Rollerskating, Graphic Design, Paddleboarding and Other Watersports, Yoga/Pilates, Forecasting</p>
+                                                <p class="text-muted mb-0"> Rollerskating, Forecasting, Graphic Design, Cloud-Watching, Paddleboarding and Other Watersports, Yoga/Pilates</p>
                                             </div>
                                         </div>
                                         </div>
-                                <div class="col-lg-4 text-left">
+                               <!--  <div class="col-lg-4 text-left">
                                                 <div class="services-item">
                                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
                                                             <i class="lni lni-thought size-md base-color"></i>
                                                     </div>
                                                     <div class="services-content">
                                                         <h5 class="mb-3">OUTREACH</h5>
-                                                        <p class="text-muted mb-0">Mentoring, Beach Cleanups, Sea Turtle Beach Surveys, Local Shelters</p>
+                                                        <p class="text-muted mb-0"></p>
                                                     </div>
                                                 </div>
-                                                </div>
+                                                </div> -->
                         
                         </div>
                         </div>
