--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
                                                 <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"><span class="base-color"></span></span></i></a></li>
-                                                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></i></a></li> -->
+                                                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube text-dark"></i></i></a></li> 
                                                 <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);">
                                                     <i class="lni-github-original text-dark"></i></a></li> -->
                                                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="https://www.tiktok.com/@air.sea.sam"><i class="lni-tiktok-original text-dark"></i></a></li> -->
-                                                <li class="list-inline-item"><a href="https://paypal.me/airseasam?locale.x=en_US"><i class="lni lni-paypal"></i></i></a></li> -->
+                                                <li class="list-inline-item"><a href="https://paypal.me/airseasam?locale.x=en_US"><i class="lni lni-paypal text-dark"></i></i></a></li> 
                                             </ul>
                                         </div>
                                     </div>
@@ -233,7 +233,7 @@
                                      <div class="row">
                                         <div class="col-12">
                                             <a href="assets\img\SamanthaCV.pdf" class="pill-button mt-3 mb-lg-0 mr-4" target="_blank">Download CV</a>
-                                            
+                                            <a href ="https://docs.google.com/forms/d/1IDsx8fx6bPgYFxdaqEQxKk9SCUQx7q5mOfexyw8HnNM/prefill" class="pill-button mt-3 mb-lg-0">Request a Weather Forecast</a>
                                         </div>
                                     </div>
                                  </div>
