--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                      <div class="row">
                                          <div class="col-12">
                                              <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0 mr-4"> Ask about Research</a>
-                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Ask about Media Collaborations</a>
+                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Ask about Media Collabs</a>
                                          </div>
                                      </div>
                                      <div class="row">
