--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="hero-content">
-                                        <h1 class="text-dark mb-2"><span class="base-color">I'm Samantha</span></h1>
+                                        <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing with a B.S. in Meteorology  </span></p>
                                         <div>
@@ -208,7 +208,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2"><span class="base-color">About Me</span></h2>
-                                     <h5 class="text-dark mb-2"><span class="base-color">Hello, I'm Samantha </span></h5>
+                                     <h5 class="text-dark mb-2"><span class="base-color">Hello, I'm Sam </span></h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
@@ -302,7 +302,7 @@
                                         </li>
                                          <li>
                                              <h6 class="base-color mb-0">Sea Turtle Researcher/Surveyor</h6>
-                                             <small class="text-muted ">Miami,FL</small>
+                                             <small class="text-muted ">Miami, FL</small>
                                              <!--<small class="text-muted ">Current</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
